cf_analysis_results/checkerframework_results/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8.txt
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:236: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-217 $$ java.io.FileReader $$ possible exceptional exit due to in.readLine() with exception type java.io.IOException $$ ( 5415, 5436 ) $$ @MustCall method close may not have been invoked on temp-var-217 or any of its aliases.
	    BufferedReader in = new BufferedReader(new FileReader(fname));
	                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to in.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/PositionTable.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-255 $$ java.io.FileReader $$ possible exceptional exit due to in.readLine() with exception type java.io.IOException $$ ( 668, 689 ) $$ @MustCall method close may not have been invoked on temp-var-255 or any of its aliases.
	    BufferedReader in = new BufferedReader(new FileReader(fname));
	                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to in.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/main/Graph.java:99: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-584 $$ java.io.FileWriter $$ possible exceptional exit due to new FileWriter(dir + algoName + violatedTerminalsCVRFile) with exception type java.io.IOException $$ ( 4475, 4517 ) $$ @MustCall method close may not have been invoked on temp-var-584 or any of its aliases.
			PrintWriter degreeOut = new PrintWriter(new BufferedWriter(new FileWriter(dir+algoName+outDegreeFile)));
			                                                           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to new FileWriter(dir + algoName + violatedTerminalsCVRFile) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/main/Graph.java:100: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-587 $$ java.io.FileWriter $$ possible exceptional exit due to new FileWriter(dir + algoName + violatedNodesRatioFile) with exception type java.io.IOException $$ ( 4601, 4654 ) $$ @MustCall method close may not have been invoked on temp-var-587 or any of its aliases.
			PrintWriter violatedTerminalsCVRFileOut = new PrintWriter(new BufferedWriter(new FileWriter(dir+algoName+violatedTerminalsCVRFile)));
			                                                                             ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to new FileWriter(dir + algoName + violatedNodesRatioFile) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/main/Graph.java:101: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-590 $$ java.io.FileWriter $$ possible exceptional exit due to new FileWriter(dir + algoName + violatedRunsRatioFile) with exception type java.io.IOException $$ ( 4732, 4783 ) $$ @MustCall method close may not have been invoked on temp-var-590 or any of its aliases.
			PrintWriter violatedNodesRatioOut = new PrintWriter(new BufferedWriter(new FileWriter(dir+algoName+violatedNodesRatioFile)));
			                                                                       ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to new FileWriter(dir + algoName + violatedRunsRatioFile) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/main/Graph.java:102: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-593 $$ java.io.FileWriter $$ possible exceptional exit due to new FileWriter(dir + algoName + percCovTerFile) with exception type java.io.IOException $$ ( 4860, 4910 ) $$ @MustCall method close may not have been invoked on temp-var-593 or any of its aliases.
			PrintWriter violatedRunsRatioOut = new PrintWriter(new BufferedWriter(new FileWriter(dir+algoName+violatedRunsRatioFile)));
			                                                                      ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to new FileWriter(dir + algoName + percCovTerFile) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/main/Graph.java:103: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-596 $$ java.io.FileWriter $$ possible exceptional exit due to new FileWriter(dir + tempFile) with exception type java.io.IOException $$ ( 4980, 5023 ) $$ @MustCall method close may not have been invoked on temp-var-596 or any of its aliases.
			PrintWriter percCovTerOut = new PrintWriter(new BufferedWriter(new FileWriter(dir+algoName+percCovTerFile)));			
			                                                               ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to new FileWriter(dir + tempFile) with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
